fix scale cutoff on desktop

--- a/src/widget.scss
+++ b/src/widget.scss
@@ -9,6 +9,7 @@ $light-grey: #d0d0d0;
 $grey: #c0c0c0;
 $red: #d97400;
 $dark-grey: #3d3d3d;
+$top-boundary: 780px;
 .czw {
   --title: 40px;
   --label: 16px;
@@ -25,7 +26,7 @@ $dark-grey: #3d3d3d;
   border-radius: 12px;
   font-size: var(--label);
 
-  @media (min-width: 740px) {
+  @media (min-width: $top-boundary) {
     flex-direction: row;
     align-items: stretch; // ensure row items fill columns
     justify-content: space-between; // center widget horizontally
@@ -44,7 +45,7 @@ $dark-grey: #3d3d3d;
     justify-content: space-between;
     align-items: center;
 
-    @media (min-width: 740px) {
+    @media (min-width: $top-boundary) {
       padding: 20px 25px 25px;
       flex-direction: column;
       justify-content: flex-start;
@@ -72,7 +73,7 @@ $dark-grey: #3d3d3d;
       height: 70vh;
     }
 
-    @media (min-width: 740px) {
+    @media (min-width: $top-boundary) {
       width: 58%;
       height: auto;
       border-right: 1px solid $dark-grey;
@@ -122,7 +123,7 @@ $dark-grey: #3d3d3d;
         width: 100%;
         height: 100%;
       }
-      @media (min-width: 740px) {
+      @media (min-width: $top-boundary) {
         height: 250px;
       }
     }
@@ -164,7 +165,7 @@ $dark-grey: #3d3d3d;
           &--czw_400 {
             transform: translateY(100%);
 
-            @media (min-width: 430px) and (max-width: 740px) {
+            @media (min-width: 430px) and (max-width: $top-boundary) {
               transform: translateY(150%);
             }
           }
@@ -180,7 +181,7 @@ $dark-grey: #3d3d3d;
               transform: translateY(1600%);
             }
 
-            @media (min-width: 740px) {
+            @media (min-width: $top-boundary) {
               transform: translateY(1050%);
             }
           }
@@ -212,18 +213,17 @@ $dark-grey: #3d3d3d;
 
   &__stats {
     width: 100%;
-    height: calc(30vh - 20px);
-    // height: 220px;
+    height: 220px;
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
 
     @media (min-width: 430px) {
       flex-direction: row;
-      height: calc(20vh - 20px);
+      height: 120px;
     }
 
-    @media (min-width: 740px) {
+    @media (min-width: $top-boundary) {
       max-width: 300px;
       width: 27.5%;
       height: auto;
@@ -244,7 +244,7 @@ $dark-grey: #3d3d3d;
         height: 100%;
       }
 
-      @media (min-width: 740px) {
+      @media (min-width: $top-boundary) {
         width: 100%;
         height: 60%;
 
@@ -259,7 +259,7 @@ $dark-grey: #3d3d3d;
         flex-direction: row;
         justify-content: space-around;
 
-        @media (min-width: 740px) and (max-width: 900px) {
+        @media (min-width: $top-boundary) and (max-width: 900px) {
           flex-direction: column;
           justify-content: center;
         }
@@ -284,6 +284,7 @@ $dark-grey: #3d3d3d;
           margin-top: 3px;
           height: 30%;
           min-height: 30px;
+          max-height: 40px;
           width: 80%;
           max-width: 220px;
         }
@@ -298,7 +299,7 @@ $dark-grey: #3d3d3d;
       justify-content: center;
       color: $dark-grey;
 
-      @media (min-width: 740px) {
+      @media (min-width: $top-boundary) {
         width: 100%;
         justify-content: center;
         align-items: flex-start;
